--- a/projects.html
+++ b/projects.html
@@ -25,9 +25,9 @@
     <div class="projects-grid">
       <div class="project-card">
         <img src="images/project1.jpg" alt="Project 1">
-        <h3>Smart Waste Management</h3>
-        <p>A web app using Python and Flask to track city waste bins in real-time.</p>
-        <p><strong>Tech:</strong> Python, Flask, Bootstrap</p>
+        <h3>Space-shooter</h3>
+        <p>A game using JAVA</p>
+        <p><strong>Tech:</strong> Java</p>
         <a href="https://github.com/Fardin4585/smart-waste" target="_blank">View on GitHub</a>
       </div>
 
