--- a/projects.html
+++ b/projects.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Projects - Fardin</title>
   <link rel="stylesheet" href="projects.css">
 </head>
+
 <body>
   <header>
     <div class="logo">FK</div>
@@ -25,38 +27,48 @@
     <div class="projects-grid">
       <div class="project-card">
         <img src="images/project1.jpg" alt="Project 1">
-        <h3>Space-shooter</h3>
-        <p>A game using JAVA</p>
-        <p><strong>Tech:</strong> Java</p>
-        <a href="https://github.com/Fardin4585/smart-waste" target="_blank">View on GitHub</a>
+        <div>
+          <h3>Space-shooter</h3>
+          <p>A game using JAVA</p>
+          <p><strong>Tech:</strong> Java</p>
+          <a href="https://github.com/Fardin4585/Space-shooter" target="_blank">View on GitHub</a>
+        </div>
+      </div>
+
+
+      <div class="project-card">
+        <img src="images/project2.png" alt="Project 2">
+        <div>
+          <h3>Personal Portfolio</h3>
+          <p>A responsive portfolio website to showcase my resume, projects, and contact info.</p>
+          <p><strong>Tech:</strong> HTML, CSS, JavaScript</p>
+          <a href="https://github.com/Fardin4585/portfolio" target="_blank">View on GitHub</a>
+        </div>
       </div>
 
       <div class="project-card">
-        <img src="images/project2.jpg" alt="Project 2">
-        <h3>Personal Portfolio</h3>
-        <p>A responsive portfolio website to showcase my resume, projects, and contact info.</p>
-        <p><strong>Tech:</strong> HTML, CSS, JavaScript</p>
-        <a href="https://github.com/Fardin4585/portfolio" target="_blank">View on GitHub</a>
+        <img src="images/project3.png" alt="Project 2">
+        <div>
+          <h3>Coming Soon</h3>
+          <p>Details will be given</p>
+          <p><strong>Tech:</strong> HTML, CSS, JavaScript</p>
+          <a href="https://github.com/Fardin4585/portfolio" target="_blank">View on GitHub</a>
+        </div>
       </div>
 
       <div class="project-card">
-        <img src="images/project3.jpg" alt="Project 3">
-        <h3>Weather App</h3>
-        <p>A JavaScript web app that shows real-time weather using OpenWeather API.</p>
-        <p><strong>Tech:</strong> JavaScript, API</p>
-        <a href="https://github.com/Fardin4585/weather-app" target="_blank">View on GitHub</a>
-      </div>
-
-      <div class="project-card">
-        <img src="images/project3.jpg" alt="Project 4">
-        <h3>Weather App</h3>
-        <p>A JavaScript web app that shows real-time weather using OpenWeather API.</p>
-        <p><strong>Tech:</strong> JavaScript, API</p>
-        <a href="https://github.com/Fardin4585/weather-app" target="_blank">View on GitHub</a>
+        <img src="images/project4.png" alt="Project 2">
+        <div>
+          <h3>Coming Soon</h3>
+          <p>Details will be given</p>
+          <p><strong>Tech:</strong> HTML, CSS, JavaScript</p>
+          <a href="https://github.com/Fardin4585/portfolio" target="_blank">View on GitHub</a>
+        </div>
       </div>
 
       <!-- Add more project cards as needed -->
     </div>
   </section>
 </body>
+
 </html>
