--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             class="gold">Developer</span></span></h1>
       <p class="description">
         I am a focused and talented B.Sc.CSE student currently pursuing my bachelor degree from North South University.
-        <a href="#">See More..</a>
+        <a href="about.html">See More..</a>
       </p>
       <div class="buttons">
         <a href="hire.html"
