--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="logo">FK</div>
     <nav>
       <ul>
-        <li><a href="#"><span>🏠</span> Home</a></li>
+        <li><a href="index.html"><span>🏠</span> Home</a></li>
         <li><a href="about.html"><span>👤</span> About Me</a></li>
         <li><a href="contact.html"><span>📞</span> Contact Me</a></li>
       </ul>
