--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
         </svg>
 
       </a>
+
+      <a href="https://x.com/Fardin77718370" target="_blank" aria-label="X (Twitter)">
+        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="#00b4d8" viewBox="0 0 24 24">
+          <path
+            d="M20.79 3H17.1l-4.28 5.1L8.28 3H3l6.97 8.25L3.29 21H7l4.76-5.66L15.99 21h5.71l-7.37-8.71L20.79 3zm-4.47 2.17l-9.68 11.4H6.7L16.38 5.17h-.06z" />
+        </svg>
+      </a>
+
     </div>
   </header>
 
@@ -52,14 +60,13 @@
         <a href="about.html">See More..</a>
       </p>
       <div class="buttons">
-        <a href="hire.html"
-           class="btn hire">
+        <a href="hire.html" class="btn hire">
           Hire me!
         </a>
-      
+
         <a href="projects.html" class="btn project">See My Project</a>
       </div>
-      
+
     </div>
     <div class="image-container">
       <img src="profile.jpg" alt="Fardin's Profile">
