--- a/contact.html
+++ b/contact.html
@@ -74,6 +74,14 @@
                     22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" />
                 </svg>
             </a>
+
+            <a href="https://x.com/Fardin77718370" target="_blank" aria-label="X (Twitter)">
+                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="#00b4d8" viewBox="0 0 24 24">
+                    <path
+                        d="M20.79 3H17.1l-4.28 5.1L8.28 3H3l6.97 8.25L3.29 21H7l4.76-5.66L15.99 21h5.71l-7.37-8.71L20.79 3zm-4.47 2.17l-9.68 11.4H6.7L16.38 5.17h-.06z" />
+                </svg>
+            </a>
+
         </div>
     </div>
 </body>
