hire email problem fixed

--- a/hire.html
+++ b/hire.html
@@ -20,7 +20,7 @@
 
   <section class="form-section">
     <h1>Hire Me</h1>
-    <form action="https://formsubmit.co/tewosi9974@nutrv.com" method="POST">
+    <form action="https://formsubmit.co/fk.fardin4585@gmail.com" method="POST">
       <input type="hidden" name="_subject" value="Project Inquiry">
 
       <label for="name">Your Name</label>
