--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     </div>
     <div class="image-container">
-      <img src="profile.jpg" alt="Fardin's Profile">
+      <img src="images\profile.jpg" alt="Fardin's Profile">
     </div>
   </section>
 </body>
